# control-diffusion

./: .gitignore  EpidemicRun.ipynb  GNN-Lightning.ipynb  LICENSE.md  MongoDB.ipynb  NetworkExploration.ipynb  README.md  RL.ipynb  __init__.py  agent_config.json  env.yml  pyproject.toml  run_trace.bat  run_trace.sh  setup.py
control_diffusion/: __init__.py  action_sampler.py  agent.py  general_utils.py  model_utils.py  rank_model.py
fig/: df.html
graph/: cite.graphia  cite.graphml  cora.graphml
lib/: agent.py  data.py  general_utils.py  model.py  model_utils.py  rank_model.py  run_tracing.py
lib/tracing/: exp_sampler.py  models.py  multirun_engine.py  network.py  simulation.py  stats.py  utils.py
scripts/: clean.bat  paramgrid.py
src/: __init__.py  agent.py  model_utils.py  rank_model.py
temp/: agent_0.json  amodel_0.json
